--- a/_posts/2020-02-20-잘못된핸들.md
+++ b/_posts/2020-02-20-잘못된핸들.md
@@ -4,10 +4,10 @@ title : "\"잘못된 파일 핸들입니다\" 뜨는 파일 삭제 방법"
 
 "잘못된 파일 핸들입니다" 와 함께 메시지가 뜨지 않는 경우가 있다.  
 
-![잘못된 파일 핸들입니다.png](./img/잘못된&#32;파일&#32;핸들입니다.PNG)
+![잘못된 파일 핸들입니다.png](https://github.com/ljhfs2207/tips/blob/master/_posts/img/%EC%9E%98%EB%AA%BB%EB%90%9C%20%ED%8C%8C%EC%9D%BC%20%ED%95%B8%EB%93%A4%EC%9E%85%EB%8B%88%EB%8B%A4.PNG)
 
 이럴 때는 커맨드를 관리자 모드로 연 다음 강제로 삭제해주면 된다.
 ```
 del "\\.\H:\원하는파일명"
 ```
-![del](./img/강제삭제.PNG)
+![del](https://github.com/ljhfs2207/tips/blob/master/_posts/img/%EA%B0%95%EC%A0%9C%EC%82%AD%EC%A0%9C.PNG)
